# Dersbiander

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/Dersbiander/: Token.hpp  dersbiander.hpp
src/: CMakeLists.txt
src/dersbiander/: CMakeLists.txt  main.cpp
src/dersbiander_lib/: CMakeLists.txt  dersbiander.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
